# PNUME-chat

./: CONTRIBUTING.md  README.md
backend/: .env.example  .gitignore  .style.yapf  README.md  alembic.ini  init_db.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 053afded2b51_update_supports_table.py  114938ffb3f4_update.py  13ebed0d0eed_create_tables_for_general_info.py  16593effbe7b_add_vector_column_to_professor_.py  22c28e82f649_add_seq_column_to_professors.py  268ef822d75c_fix_relationship.py  2d91f0e03946_건물_번호_문자열로_변경.py  3a81aab7cb36_건물_추가정보_nullable_속성_추가.py  413b6db18ad9_update_professor_tables.py  52432bfbaee2_학사일정_학기_구분_nullable.py  61965c1ffcec_건물_빌딩_관계_업데이트.py  697d4c9be412_학기_구분에_여름_겨울방학_추가.py  7405d59aab4f_update.py  8de374df7a93_fix_relationship.py  9ded957204fe_add_cascade_notices.py  9eb6940b8b77_공지사항_인덱스_추가.py  a321a294d193_공지사항에_학기_구분_추가.py  afe8a1d6d543_main_department_삭제.py  b2e0324c6b7c_건물_학과_관계_업데이트.py  db802a4ee9d9_건물_학과_관계_업데이트.py  dde643dabca4_건물_추가정보_nullable_속성_추가.py
backend/app/: README.md  main.py
backend/app/api/: chat.py  create_chat.py  function_call.py  main.py
backend/app/service/: dto.py  embedder.py
backend/config/: config.py  logger.py  onestop.json
backend/containers/: __init__.py  app.py  calendar.py  notice.py  professor.py  support.py
backend/containers/crawler/: notice.py  support.py
backend/crawler/: common.py
backend/crawler/models/: News.py  Notice.py
backend/crawler/news/: scraper.py  urls.py
backend/db/: common.py
backend/db/models/: __init__.py  buildings.py  calendar.py  fields.py  lecture.py  notice.py  professor.py  subject.py  support.py  support_system.py  universities.py  university.py
backend/db/repositories/: __init__.py  base.py  calendar.py  notice.py  notice_me.py  professor.py  subject.py  support.py  university.py
backend/libs/db/: VectorDB.py  common.py  postgres.py  retriever.py  retrival.py
backend/libs/functionCall/: functionCall.py
backend/mixins/: asyncio.py  http_client.py
backend/scripts/: init_db.py
backend/services/: app.py
backend/urls/: notices.json  professors.json  univ.json  univ2.json
backend/utils/: embed.py  fetch.py  scrape.py  semaphore.py
(+99 files in other folders)
